[gd_scene load_steps=5 format=2]

[ext_resource path="res://titlescreen/font/pdark33.tres" type="DynamicFont" id=1]
[ext_resource path="res://finish/Restart.gd" type="Script" id=2]
[ext_resource path="res://finish/StartMenu.gd" type="Script" id=3]
[ext_resource path="res://Pause/theme.tres" type="Theme" id=4]

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="."]
margin_left = -153.518
margin_top = 63.1602
margin_right = 59.4823
margin_bottom = 97.1602
custom_fonts/font = ExtResource( 1 )
text = "replay"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMenu" type="Button" parent="."]
margin_left = -168.427
margin_top = 125.16
margin_right = 61.5725
margin_bottom = 160.16
custom_fonts/font = ExtResource( 1 )
text = "main menu"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
margin_left = -153.518
margin_top = 183.047
margin_right = 46.4823
margin_bottom = 216.047
custom_fonts/font = ExtResource( 1 )
text = "exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -236.0
margin_right = 236.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0.0862745, 0.176471, 0.901961, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "c o n g r a t u l a t  i o n"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Restart" to="Restart" method="_on_Restart_pressed"]
[connection signal="pressed" from="StartMenu" to="Restart" method="_on_StartMenu_pressed"]
[connection signal="pressed" from="Exit" to="Restart" method="_on_Exit_pressed"]
